// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 ftMJFT"
  tabindex="0"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click me
    </span>
  </button>
  <div
    class="Popoverstyles__Message-wdclke-1 ckagnX"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Popover w/ any props 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 ftMJFT"
  id="id"
  tabindex="0"
  title="title"
>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    />
  </div>
</span>
`;

exports[`Popover w/ design 1`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 ftMJFT"
  tabindex="0"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click me
    </span>
  </button>
  <div
    class="Popoverstyles__Message-wdclke-1 ckagnX"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;

exports[`Popover w/ design 2`] = `
<span
  class="Popoverstyles__Wrapper-wdclke-0 ftMJFT"
  tabindex="0"
>
  <button
    class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
    type="button"
  >
    <span
      class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
    >
      Click me
    </span>
  </button>
  <div
    class="Popoverstyles__Message-wdclke-1 cWyuyv"
    width="250"
  >
    <div
      class="Popoverstyles__CloseIcon-wdclke-4 gURkzf"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Popoverstyles__Header-wdclke-2 fYngzS"
    >
      This is header
    </div>
    <div
      class="Popoverstyles__Content-wdclke-3 dNpuLA"
    >
      Ut ut dui non ipsum pharetra aliquam id in libero. Aenean placerat leo nec ex pharetra finibus. Nunc id turpis eu risus rhoncus cursus quis efficitur sapien. Donec vitae arcu at lectus placerat fringilla.
    </div>
  </div>
</span>
`;
